[package]
name = "tiny-ssh-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "tiny-ssh terminal UI (MVP)"

[[bin]]
name = "tssh"
path = "src/main.rs"

[dependencies]
tiny-ssh-core = { workspace = true }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
rpassword = "7"
