[package]
name = "tiny-ssh-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "tiny-ssh terminal UI (MVP)"

[[bin]]
name = "tssh"
path = "src/main.rs"

[dependencies]
tiny-ssh-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
ratatui = { workspace = true }
crossterm = { workspace = true }
alacritty_terminal = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rpassword = "7"
