[package]
name = "tiny-ssh-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "tiny-ssh core library: SSH/DB transport, sessions, history, suggestions"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
